// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractReadMethod.vue Should display a generic error message if the function fails 1`] = `
<div>
  <div class="pb-1 font-weight-bold">isProxy</div>
  <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: 0px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-90" class="v-label theme--light" style="left: 0px; position: absolute;">address</label><input id="input-90" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; bool</div>
  <div id="call" style="display: none;"></div>
  <div id="call" class="grey lighten-3 pa-2" style="">
    Error while calling the method
  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should display the UI to interact with a method 1`] = `
<div>
  <div class="pb-1 font-weight-bold">isProxy</div>
  <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: 0px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-6" class="v-label theme--light" style="left: 0px; position: absolute;">address</label><input id="input-6" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; bool</div>
  <div id="call" style="display: none;"></div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should display the error message if one is returned 1`] = `
<div>
  <div class="pb-1 font-weight-bold">isProxy</div>
  <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: 0px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-81" class="v-label theme--light" style="left: 0px; position: absolute;">address</label><input id="input-81" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; bool</div>
  <div id="call" style="display: none;"></div>
  <div id="call" class="grey lighten-3 pa-2" style="">
    Wrong parameters
  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should display the result even if it is not an array 1`] = `
<div>
  <div class="pb-1 font-weight-bold">returnAnUInt</div>
  <div>=&gt; uint256</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    uint256: 
    <span><!----> 1234</span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should handle big number results 1`] = `
<div>
  <div class="pb-1 font-weight-bold">returnAnUInt</div>
  <div>=&gt; uint256</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    uint256: 
    <span><!----> 50000000000000000000</span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should handle multiple results 1`] = `
<div>
  <div class="pb-1 font-weight-bold">returnAnUInt</div>
  <div>=&gt; uint256, uint256</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    uint256: 
    <span><!----> 1</span></span></div>
      </div>
    </div>
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    uint256: 
    <span><!----> 2</span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should return the result when interacting with the method 1`] = `
<div>
  <div class="pb-1 font-weight-bold">isProxy</div>
  <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: 0px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-27" class="v-label theme--light" style="left: 0px; position: absolute;">address</label><input id="input-27" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; bool</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    bool: 
    <span><!----> <span><span>
                true
            </span></span></span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should work when input is any array 1`] = `
<div>
  <div class="pb-1 font-weight-bold">reproBug</div>
  <div class="v-input py-1 v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: -24px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-14" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">uint256[] values</label><input id="input-14" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; uint256[]</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    uint256[]: 
    <span><!----> <span><span>
                [

                    <span>
                        		<span>
    uint256: 
    <span><!----> 1</span></span>

          </span><span>
                        		<span>
    uint256: 
    <span><!----> 2</span></span>

          </span>
          ]
          </span></span></span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;

exports[`ContractReadMethod.vue Should work when it is in public explorer mode 1`] = `
<div>
  <div class="pb-1 font-weight-bold">isProxy</div>
  <div class="v-input py-1 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
    <div class="v-input__control">
      <div class="v-input__slot">
        <fieldset aria-hidden="true">
          <legend style="width: 0px;"><span>​</span></legend>
        </fieldset>
        <div class="v-text-field__slot"><label for="input-38" class="v-label theme--light" style="left: 0px; position: absolute;">address</label><input id="input-38" type="text"></div>
      </div>
    </div>
  </div>
  <div>=&gt; bool</div>
  <div id="call" style="">
    <div class="my-1 v-card v-card--outlined v-sheet theme--light">
      <div class="v-card__text py-2 ma-0 px-1">
        <div style="white-space: pre;"><span>
    bool: 
    <span><!----> <span><span>
                true
            </span></span></span></span></div>
      </div>
    </div>
  </div>
  <div id="call" class="grey lighten-3 pa-2" style="display: none;">

  </div> <button type="button" class="mt-1 v-btn v-btn--depressed theme--light v-size--default primary"><span class="v-btn__content">Query</span></button>
</div>
`;
